--- a/src/Show/Show.css
+++ b/src/Show/Show.css
@@ -26,6 +26,36 @@
   box-shadow: 0 1px 20px 5px rgba(0, 0, 0, 0.15);
 }
 
+.tv-show-card__summary-wrapper {
+  position: relative;
+}
+
+.tv-show-card__summary-wrapper::before {
+  position: absolute;
+
+  top: 0;
+
+  width: 100%;
+  height: .5rem;
+  
+  content: "";
+
+  background-image: linear-gradient(to bottom, var(--color-body), transparent);
+}
+
+.tv-show-card__summary-wrapper::after {
+  position: absolute;
+
+  bottom: 0;
+
+  width: 100%;
+  height: .5rem;
+  
+  content: "";
+
+  background-image: linear-gradient(to bottom, transparent, var(--color-body));
+}
+
 .tv-show-card__summary {
   max-height: 10rem;
 
