--- a/src/Show/Show.css
+++ b/src/Show/Show.css
@@ -30,26 +30,13 @@
   position: relative;
 }
 
-.tv-show-card__summary-wrapper::before {
-  position: absolute;
-
-  top: 0;
-
-  width: 100%;
-  height: .5rem;
-  
-  content: "";
-
-  background-image: linear-gradient(to bottom, var(--color-body), transparent);
-}
-
 .tv-show-card__summary-wrapper::after {
   position: absolute;
 
   bottom: 0;
 
   width: 100%;
-  height: .5rem;
+  height: 1rem;
   
   content: "";
 
@@ -59,7 +46,7 @@
 .tv-show-card__summary {
   max-height: 10rem;
 
-  overflow: auto;
+  overflow: hidden;
 }
 
 .tv-show-card__button {
