--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
 
   background-color: var(--color-body);
 
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-kerning: normal;
   font-variant-ligatures: common-ligatures;
 }
